# codspeed-e2e

./: README.md
.github/actions/run-benchmarks/: action.yml
.github/workflows/: codspeed.yml
python/: .gitignore  __init__.py  benchmark.py  fractal.py  main.py  pyproject.toml  test_benchmark.py
