[project]
name = "fractal-benchmark"
version = "0.1.0"
description = "Fractal tree benchmark with pytest-codspeed"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-codspeed>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["test_benchmark.py"]
